--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -228,6 +228,7 @@ a:focus {
 
 /* Text meant only for screen readers */
 .screen-reader-text {
+	color: #000;
 	clip: rect(1px, 1px, 1px, 1px);
 	overflow: hidden;
 	position: absolute !important;
