--- a/sass/base/_normalize.scss
+++ b/sass/base/_normalize.scss
@@ -14,6 +14,7 @@ pre {
 	font-size: 1em;
 }
 a {
+	color: #1E749F;
 	background-color: transparent;
 }
 abbr[title] {
